# Quant-VM---Crypto-Arbitrage-Software

./: DB_DDL.sql  Dockerfile  README.md  docker-compose.yaml  install.sh  pyproject.toml  requirements.txt
prometheus/: prometheus.yml
scripts/: migrate_db.py  run.sh
src/: __init__.py  algo_multilateral_arbitrage.py  algorithm_exception.py  base_with_database_logger.py  buildblocks.py  data_types.py  example_config.json  helpers.py  main.py  sql_queries.py  trading_algorithm.py
src/client/: __init__.py  custom_sdk_client.py  test_sdk_client.py
src/custom_binance_connector/: connector.py  test.py
src/custom_bitfinex_connector/: connector.py
src/custom_kraken_connector/: connector.py  test.py
src/latency_measurement/: response_times.py
src/market_data/: binance_api.py
src/order_status/: __init__.py  app.py  order_status.py
src/performance/: algo_performance.py  app.py  historic.py  tests.py
src/performance/metrics/: __init__.py  metric.py  order_volume.py  pnl.py  util.py
src/trading_environment/: balances.py
src/util/: __init__.py  util.py
test/: binance_loading_performance.py  configs-link-eur.yaml  sndbxx.py  test_algo_multilateral_arbitrage.py  test_algorithm.py  test_api.py  test_arbitrage.py  test_datetime_to_unix.py  test_logging.py  test_order_status.py  test_sdk_client.py  test_to_datetime_conversion.py
test/concepts/: async_test.py  test_connector.py  websocket_test.py
