[tool.poetry]
name = "arbitrage-algorithm"
version = "0.1.0"
description = "Arbitrage algorithm"
authors = ["mafycek <h.lavicka@email.cz>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
attrs = "^21.2.0"
certifi = "^2021.5.30"
chardet = "^4.0.0"
dateparser = "^1.0.0"
greenlet = "^1.1.1"
multidict = "^5.1.0"
pandas = "^1.3.3"
prometheus-client = "^0.11.0"
psycopg2-binary = "^2.9.1"
python-binance = "^1.0.14"
python-dateutil = "^2.8.2"
python-dotenv = "^0.19.0"
quant-sdk = "^1.0.0"
requests = "^2.26.0"
ujson = "^4.1.0"
tzlocal = "^3.0"
yarl = "^1.6.3"
PyYAML = "^5.4.1"
websocket = "^0.2.1"
bitfinex-api-py = "^1.1.15"
pykrakenapi = "^0.2.1"
psycopg2 = "^2.9.1"
matplotlib = "^3.4.3"
Flask = {extras = ["async"], version = "^2.0.2"}
pytest = "^6.2.5"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
